<resources>
    <string name="app_name">ESmogLogger</string>
    <string name="title_home">ESmogLogger V1.0</string>
    <string name="title_chart">Chart</string>
    <string name="title_settings">Settings</string>
    <string name="title_cloud">Cloud</string>
    <string name="main_menu_title">Main menu</string>
    <string name="main_menu_reset_zoom">Reset zoom</string>
    <string name="main_menu_set_notes">Set notes</string>
    <string name="radio_chart_lvl">Lvl</string>
    <string name="radio_chart_frq">Frq</string>
    <string name="radio_chart_lvl_plus_frq">Frq + Lvl</string>
    <string name="radio_chart_lvl_and_frq">Frq | Lvl</string>
    <string name="record_gps_location">Record GPS Location</string>
    <string name="gps_location_title">GPS Location:</string>
    <string name="gps_position">Lat=?\nLng=?\nAlt=?</string>
    <string name="recordings_title">Recordings</string>
    <string name="recorded_time_title">Recorded time:</string>
    <string name="recorded_time_0s">0 s</string>
    <string name="title_map">Map</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="filename">Filename</string>
    <string name="file_size">File size</string>
    <string name="gps">GPS</string>
    <string name="count">Count</string>
    <string name="loaded">Ld</string>
    <string name="total_recording_time">Total Rec. Time</string>
    <string name="statistics">Statistics</string>
    <string name="_0">0 %</string>
    <string name="red_180"><![CDATA[Red (<=180.0)]]></string>
    <string name="red_58"><![CDATA[Red (<=58.0)]]></string>
    <string name="yellow_18"><![CDATA[Yellow (<=18.0)]]></string>
    <string name="yellow_5_8"><![CDATA[Yellow (<=5.8)]]></string>
    <string name="yellow_1_8"><![CDATA[Yellow (<=1.8)]]></string>
    <string name="green_0_58"><![CDATA[Green (<=0.58)]]></string>
    <string name="green_0_18"><![CDATA[Green (<=0.18)]]></string>
    <string name="green_0_06"><![CDATA[Green (<=0.06)]]></string>
    <string name="red_gt_180"><![CDATA[Red (>180.0)]]></string>
    <string name="_1f">%.1f %%</string>
    <string name="_0_mwh">0 mWh</string>
    <string name="total_energy">Total Energy</string>
    <string name="_0_mw">0 mW</string>
    <string name="average_level">Average Level</string>
    <string name="minimum_level">Minimum Level</string>
    <string name="maximum_level">Maximum Level</string>
    <string name="average_speed">Average Speed</string>
    <string name="maximum_speed">Maximum Speed</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0_0_0_00_00_00">0.0.0 00:00:00</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="_0_km_h">0 km/h</string>
    <string-array name="chart_view_options">
        <item>Lvl</item>
        <item>Frq</item>
        <item>Lvl + Frq</item>
        <item>Lvl | Frq</item>
    </string-array>
</resources>