<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/chart_24p"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/button_menu_globe"
        app:itemIconTint="@null"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_cloud"
        android:icon="@drawable/cloud_24p"
        android:title="@string/title_cloud" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_24p"
        android:title="@string/title_settings" />

</menu>