<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/is_loaded"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/loaded" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingEnd="8dp"
        android:text="@string/filename" />

    <TextView
        android:id="@+id/file_size"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/file_size" />

    <TextView
        android:id="@+id/has_gps"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/gps" />

    <TextView
        android:id="@+id/value_cnt"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/count" />

</LinearLayout>
