<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:columnCount="3"
    app:rowCount="3"
    app:alignmentMode="alignBounds"
    app:useDefaultMargins="true">

    <TextView
        android:id="@+id/startTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/start_time"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0_0_0_00_00_00"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/endTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/end_time"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0_0_0_00_00_00"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/totalRecordingTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/total_recording_time"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/totalRecordingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0 s"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/totalDistanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/total_distance"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/totalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0 km"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/maximumSpeedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/maximum_speed"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/maximumSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0_km_h"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/averageSpeedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/average_speed"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/averageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0_km_h"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/maximumLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/maximum_level"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/maximumLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0_mw"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/minimumLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/minimum_level"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/minimumLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0_mw"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/averageLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/average_level"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/averageLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0_mw"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/totalEnergyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/total_energy"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/totalEnergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0_mwh"
        app:layout_columnSpan="2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentRed3Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/red_gt_180"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentRed3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentRed3Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#FF0000"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/percentRed2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/red_180"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentRed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentRed2Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#BF0000"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/percentRed1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/red_58"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentRed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentRed1Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#7F0000"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/percentYellow3Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/yellow_18"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentYellow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentYellow3Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#FFFF00"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/percentYellow2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/yellow_5_8"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentYellow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentYellow2Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#BFBF00"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/percentYellow1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/yellow_1_8"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentYellow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentYellow1Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#7F7F00"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/percentGreen3Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/green_0_58"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentGreen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentGreen3Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#00FF00"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/percentGreen2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/green_0_18"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentGreen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentGreen2Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#00BF00"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/percentGreen1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/green_0_06"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/percentGreen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        android:textSize="18sp" />

    <View
        android:id="@+id/percentGreen1Bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#007F00"
        android:layout_marginStart="8dp" />

</androidx.gridlayout.widget.GridLayout>