<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wakeup.esmoglogger.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.wakeup.esmoglogger.ui.chartview.ChartViewFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.wakeup.esmoglogger.ui.mapview.MapViewFragment"
        android:label="Map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_cloud"
        android:name="com.wakeup.esmoglogger.ui.cloud.CloudFragment"
        android:label="@string/title_cloud"
        tools:layout="@layout/fragment_cloud" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.wakeup.esmoglogger.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>